# prog-metronome

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/audio/: AudioEngine.h  JuceAudioEngine.cpp  JuceAudioEngine.h  SoundConfig.h  SoundInfo.h  SoundMap.cpp  SoundMap.h
Source/builder/: Interpreter.cpp  Interpreter.h  TapTempoCalculator.cpp  TapTempoCalculator.h  TrackBuilder.cpp  TrackBuilder.h  TrackBuilderState.cpp  TrackBuilderState.h  TrackDraft.cpp  TrackDraft.h  TrackItem.cpp  TrackItem.h
Source/core/: BeatNode.cpp  BeatNode.h  Rational.h  TempoContext.h
Source/persistence/: ProjectSerializer.cpp  ProjectSerializer.h
Source/scheduler/: PrecomputedEvent.h  ScheduledEvent.h  StreamClock.cpp  StreamClock.h  Transport.cpp  Transport.h
Source/ui/: BottomPanelComponent.cpp  BottomPanelComponent.h  MainComponent.cpp  MainComponent.h  RhythmColors.h  RhythmLookAndFeel.cpp  RhythmLookAndFeel.h  ThemeConfig.h  TopBarComponent.cpp  TopBarComponent.h  TrackRowComponent.cpp  TrackRowComponent.h  UiHelpers.cpp  UiHelpers.h
Source/ui/dialogs/: RhythmDialogs.cpp  RhythmDialogs.h
